SAR Blai Sandbox/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Aspectos_valorados_por_Recomendores__c</fullName>
        <label>Aspectos valorados por Recomendores</label>
        <picklist>
            <picklistValues>
                <fullName>Actualización Ofertas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback posteriores derivaciones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback  tras primera derivación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info cambios en el servicio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Información entorno/mercado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invitación Actividades del centro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invitación a Programas de Voluntariado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invitación a Visitas a nuestros centros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invitaciones a Jornadas-Seminarios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participación iniciativas dl prescriptor</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Baja__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Baja cont</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cargo__c</fullName>
        <label>Cargo</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Categoria_Profesional__c</fullName>
        <label>Categoría Profesional</label>
        <picklist>
            <picklistValues>
                <fullName>Directivo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enfermero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jefes de Servicio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mandos Intermedios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Médico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profesionales -por cuenta ajena-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propietario Negocio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Técnico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trabajador Social</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Correo_Electronico__c</fullName>
        <label>Correo Electrónico</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Especialidad_Medica__c</fullName>
        <label>Especialidad Médica</label>
        <picklist>
            <picklistValues>
                <fullName>Cardiólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cirujano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnostico por Imagen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endocrino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enfermero (DUE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gastroenterólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gerontólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ginecólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hematólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infectólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicina de Familia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicina Interna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicina Preventiva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Médico de Família</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microbiólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nefrólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neumólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nutricionista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oftalmólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paliatólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pediatra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psicólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traumatólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgencias</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urólogo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Idioma_de_Contacto__c</fullName>
        <label>Idioma de Contacto</label>
        <picklist>
            <picklistValues>
                <fullName>Castellano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalán</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Euskera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inglés</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_correspondencia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No correspondencia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_encuestar_participar_en_estudios__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No encuestar / participar en estudios</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_enviar_Whatsapp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No enviar Whatsapp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_visitar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No visitar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Observaciones_Personales__c</fullName>
        <label>Observaciones Personales</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>identidadrecomendadora__c</fullName>
        <formula>Account.Empresa_recomendadora__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>identidadrecomendadora</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Contactos_Newsletter</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Baja__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Correo_Electronico__c</field>
            <operation>notContain</operation>
            <value>sarq-empleados</value>
        </filters>
        <label>Contactos Newsletter</label>
    </listViews>
    <listViews>
        <fullName>Contactos_Web</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>web</value>
        </filters>
        <label>Contactos Web</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>